--- a/main.html
+++ b/main.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-
 <html>
   <head>
     <link rel="stylesheet" href="styles.css" />
@@ -10,9 +9,7 @@
       crossorigin="anonymous"
     />
   </head>
-
   <body>
-    <!-- the entire body must be written by student -->
     <table class="table table-striped table-hover table-bordered">
       <thead>
         <tr>
@@ -22,8 +19,42 @@
       </thead>
       <tbody id="output"></tbody>
     </table>
-
-    <script type="text/javascript" src="./script.js"></script>
+    <script>
+      const output = document.getElementById("output");
+      const loadingRow = document.createElement("tr");
+      loadingRow.innerHTML = `<td colspan="2" class="text-center">Loading...</td>`;
+      output.appendChild(loadingRow);
+      function createPromise(name) {
+        return new Promise((resolve) => {
+          const delay = Math.floor(Math.random() * 3) + 1;
+          const start = performance.now();
+          setTimeout(() => {
+            const end = performance.now();
+            const timeTaken = ((end - start) / 1000).toFixed(3);
+            resolve({ name, timeTaken });
+          }, delay * 1000);
+        });
+      }
+      const promises = [
+        createPromise("Promise 1"),
+        createPromise("Promise 2"),
+        createPromise("Promise 3"),
+      ];
+      const overallStart = performance.now();
+      Promise.all(promises).then((results) => {
+        const overallEnd = performance.now();
+        const totalTime = ((overallEnd - overallStart) / 1000).toFixed(3);
+        output.innerHTML = "";
+        results.forEach((res) => {
+          const row = document.createElement("tr");
+          row.innerHTML = `<td>${res.name}</td><td>${res.timeTaken}</td>`;
+          output.appendChild(row);
+        });
+        const totalRow = document.createElement("tr");
+        totalRow.innerHTML = `<td>Total</td><td>${totalTime}</td>`;
+        output.appendChild(totalRow);
+      });
+    </script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
